--- a/Bobii/docker-compose.yml
+++ b/Bobii/docker-compose.yml
@@ -2,21 +2,18 @@ version: '3.7'
 
 services:
   database:
-    image: postgres
+    image: postgres:latest
     restart: unless-stopped
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=X93oL!98#M
       - POSTGRES_USER=bobsty
       - POSTGRES_DB=bobii
-    ports:
-      - 5432:5432
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data:rw
+      - ./data/postgres:/var/lib/postgresql/data"
 
   bobii:
     image: ghcr.io/bobsty-0/bobii:bobiiupdates
     volumes:
       - ./config.json:/app/Config.json:ro
-    build: .
-  
-
