--- a/Bobii/docker/docker-compose.yml
+++ b/Bobii/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   database:
-    image: postgres:latest
+    image: postgres:alpine
     restart: unless-stopped
     ports:
       - "5432:5432"
