--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -21,10 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net.Labs" Version="2.4.9" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc1" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-rc1" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-rc1" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-rc1" />
+    <PackageReference Include="Lavalink4NET" Version="1.7.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
