--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net.Labs" Version="2.4.9" />
+    <PackageReference Include="DiscordBotsList.Api" Version="1.4.0" />
     <PackageReference Include="Lavalink4NET" Version="1.7.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
