--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -17,14 +17,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="App.config" />
     <None Remove="config.json" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Discord.Net.Labs" Version="3.1.4" />
-    <PackageReference Include="EntityFramework" Version="6.4.4" />
-    <PackageReference Include="Npgsql" Version="6.0.0-preview5" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Npgsql" Version="5.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
