made some changes in CheckAndDeleteEmptyVoiceChannels

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.Labs" Version="3.4.9" />
+    <PackageReference Include="Discord.Net" Version="3.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
