Started Backup command

--- a/Bobii/configTemplate.json
+++ b/Bobii/configTemplate.json
@@ -3,7 +3,8 @@
     {
       "token": "Bot Token here",
       "ConnectionString": "Server=Host;Port=Port;Database=DataBase;User Id=Username;Password=Password",
-      "ConnectionStringLng": "Server=Host;Port=Port;Database=DataBase;User Id=Username;Password=Password"
+      "ConnectionStringLng": "Server=Host;Port=Port;Database=DataBase;User Id=Username;Password=Password",
+      "PGBinPath": "C:\\Program Files\\PostgreSQL\\13\\bin\\"
     }
   ]
 }
