Overtook some part to the InteractionService

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -49,4 +49,8 @@
     <None Update="..\.dockerignore" Link="Docker\.dockerignore" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="src\InteractionModules\ComponentInteractions\" />
+  </ItemGroup>
+
 </Project>
