--- a/Bobii/configTemplate.json
+++ b/Bobii/configTemplate.json
@@ -5,7 +5,8 @@
       "ConnectionString": "Server=Host;Port=Port;Database=DataBase;User Id=Username;Password=Password",
       "ConnectionStringLng": "Server=Host;Port=Port;Database=DataBase;User Id=Username;Password=Password",
       "PGBinPath": "C:\\Program Files\\PostgreSQL\\13\\bin\\",
-      "MainGuildID": "ChannelID",
+      "MainGuildID": "GuildID",
+      "DeveloperGuildID": "DeveloperGuildID",
       "MainGuildCountChannelID": "ChannelID",
       "SupportGuildID": "ChannelID",
       "SupportGuildCountChannelID": "ChannelID",
