--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Npgsql" Version="5.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.7.23375.5" />
     <PackageReference Include="TwitchLib" Version="3.5.3" />
   </ItemGroup>
 
