Info command eingebaut

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -61,6 +61,9 @@
     <None Update="buttons\hidebutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="buttons\InfoButton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="buttons\kickbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
