--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -92,6 +92,9 @@
     <None Update="buttons\unlockbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="buttons\whitelistbutton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
