Buttons zusammen gefasst + interface commands für admins in allen channels zulässig gemacht

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -77,7 +77,13 @@
     <None Update="buttons\namebutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="buttons\privacybutton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="buttons\saveconfigbutton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="buttons\settingsbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="buttons\sizebutton.png">
