Message verwaltung eingebaut

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.11.0" />
+    <PackageReference Include="Discord.Net" Version="3.12.0" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
@@ -48,6 +48,9 @@
 
   <ItemGroup>
     <None Update="buttons\blockbutton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="buttons\chatbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="buttons\claimownerbutton.png">
