Willkommensnachricht übersetzt, support buttons korrigiert

--- a/Bobii/Bobii.csproj
+++ b/Bobii/Bobii.csproj
@@ -48,6 +48,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Localization\Localization.de.resx">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Localization.resx">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="buttons\blockbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
